--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.4"
+    "@astrojs/preact": "^4.1.3",
+    "@astrojs/rss": "^4.0.13",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/node": "24.10.0",
+    "astro": "^5.15.5",
+    "astro-shadcn-registry": "^1.0.0",
+    "preact": "^10.27.2",
+    "tailwindcss": "^4.1.17"
   }
 }
