--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "clean": "rimraf node_modules .astro .vite"
   },
   "dependencies": {
-    "@astrojs/preact": "^4.1.3",
     "@astrojs/rss": "^4.0.13",
     "@tailwindcss/vite": "^4.1.17",
     "@types/node": "24.10.0",
-    "astro": "^5.15.5",
-    "astro-shadcn-registry": "^1.0.0",
-    "preact": "^10.27.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
+  },
+  "devDependencies": {
+    "astro": "^5.15.5",
+    "tw-animate-css": "^1.4.0"
   }
 }
