--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,44 @@
 {
+  // Use Astro's recommended strict base configuration
   "extends": "astro/tsconfigs/strict",
+
   "include": [
     ".astro/types.d.ts",
-    "**/*"
+    "src/**/*",
+    "astro.config.*"
   ],
+
   "exclude": [
-    "dist"
+    "dist",
+    "node_modules"
   ],
+
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
+    /* === Core Settings === */
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "allowJs": true,
+    "checkJs": false,
+
+    /* === JSX / Framework Neutral === */
+    "jsx": "preserve",                // Let Astro or any renderer decide
+
+    /* === Paths / Imports === */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+
+    /* === Type Safety & Quality === */
+    "strict": true,
+    "noImplicitAny": true,
+    "noUncheckedIndexedAccess": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,             // Faster build
+    "isolatedModules": true,
+
+    /* === Output === */
+    "noEmit": true
   }
 }
